testsuite/bsc.mcd/Misc/ClockCheckCond.bsv.nocrossinfo.bsc-vcomp-out.expected
checking package dependencies
compiling ClockCheckCond.bsv
code generation for sysClockCheckCond starts
Error: "ClockCheckCond.bsv", line 6, column 8: (G0007)
  Reference across clock domain in method `out'.
  Method calls by clock domain:
    Clock domain 1:
      default_clock:
	the_y.read
    Clock domain 2:
      c:
	the_x.read
  During elaboration of the interface method `out' at "ClockCheckCond.bsv",
  line 6, column 8.
  During elaboration of `sysClockCheckCond' at "ClockCheckCond.bsv", line 6,
  column 8.
